# mixd

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .venv  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  MODERNIZE_ASYNCIO.md  PLAN.md  PROGRESS_MIGRATION_GUIDE.md  README.md  REFACTORING_PROGRESS.md  ROADMAP.md  SCRATCHPAD.md  SCRATCHPAD_CODE_CLEANUP_STALE_PATTERNS.md  SCRATCHPAD_DOMAIN_TRANSFORMS_REFACTOR.md  SCRATCHPAD_LASTFM_CONCURRENCY.md  SCRATCHPAD_MATCH_FAILURE_HANDLING.md  SCRATCHPAD_PLAYLIST_BACKUP_HARDENING.md  SCRATCHPAD_PLAYLIST_CLI_RESTRUCTURE.md  SCRATCHPAD_PLAYLIST_IDENTITY_PRESERVATION.md  SCRATCHPAD_PLAYLIST_UPDATE_FLOW_FIX.md  SCRATCHPAD_PROGRESS_CONSOLIDATION.md  SCRATCHPAD_SPOTIFY_ADDED_AT_PRESERVATION.md  SCRATCHPAD_SPOTIFY_PLAYLIST_PERFORMANCE.md  SCRATCHPAD_TEMPLATE.md  Untitled 1.md  Untitled.md  WORK.md  WORK_TEMPLATE.md  alembic.ini  cliff.toml  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  (+5 more)
.claude/: review.yaml  settings.json
.claude/agents/: architecture-guardian.md  log-diagnostician.md  react-architecture-specialist.md  reviewer-architect.md  reviewer-engineer.md  reviewer-product.md  reviewer-qa.md  reviewer-security.md  sqlalchemy-async-optimizer.md  sqlalchemy-query-expert.md  test-pyramid-architect.md  vitest-strategy-architect.md  workflow-manager.md
.claude/commands/: plan-review.md
.claude/hooks/: require-review-report.sh
.claude/rules/: api-layer-patterns.md  application-patterns.md  backlog-format.md  cli-patterns.md  database-migrations.md  domain-purity.md  implementation-completeness.md  infrastructure-patterns.md  interface-patterns.md  python-conventions.md  scripts-patterns.md  spotify-api.md  test-patterns.md  version-management.md  web-design-review.md  web-design-system.md  web-e2e-patterns.md  web-frontend-patterns.md  workflow-terminology.md
.claude/work/: WORK.md
.github/workflows/: ci.yml  neon-cleanup.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_postgresql_optimization.py  003_keyset_pagination_indexes.py  004_check_constraints.py  005_oauth_tokens.py  006_rename_service_narada_to_mixd.py  007_add_user_id_columns.py  008_uuid_primary_keys.py  009_add_track_version.py  010_add_oauth_states_table.py  011_force_rls.py  012_purge_default_user_data.py  013_shared_templates_and_oauth_cleanup.py  014_playlist_tracks_fk_indexes.py  015_child_table_rls.py  016_add_playlist_metadata_mappings.py  017_rename_metadata_mapping_to_assignment.py  018_operation_runs.py  019_fix_output_playlist_id_uuid.py  020_workflow_run_heartbeat.py  021_workflow_run_operation_id.py  022_user_scoped_playlist_mapping_uq.py  023_drop_workflow_template_kind.py  024_workflow_run_active_uq.py  025_add_schedules.py  026_add_schedule_run_linkage.py  027_add_workflow_run_number.py  028_drop_last_sync_started_at.py  029_last_sync_unmatched.py  030_sync_base_unresolved.py  031_operation_run_operation_id.py  032_operation_run_request_params.py  033_rename_day_window_keys.py  034_track_mappings_last_seen_at.py  035_lastfm_identifier_fold.py  036_add_chat_feedback.py  037_operation_run_initiated_by.py  038_pending_actions.py  039_oauth_as_tables.py  040_plays_nulls_not_distinct.py  (+7 more)
alembic/versions_sqlite_archive/: 040d47093f7d_add_source_services_to_track_plays.py  0d4a116d16b1_add_match_reviews_table.py  0f3cf2f1c012_add_workflow_runs_and_workflow_run_.py  2e3a2758af81_add_workflow_versions_table.py  3c3c6f0ed187_initial_hard_delete_schema.py  3faa2309339e_add_output_tracks_and_node_details_json_.py  5510ab9c5136_add_sync_management_columns_to_playlist_.py  5a61d0e7d025_add_workflows_table.py  6200c1faa4d6_remove_spotify_popularity_metrics.py  904c29981ae8_add_origin_to_track_mappings.py  9265eb69aab8_fix_playlist_mappings_id_not_null.py  9c0f10992fa0_add_connector_plays_table.py  a1b2c3d4e5f6_add_normalized_lookup_columns_to_tracks.py  b2c3d4e5f6a7_add_title_stripped_column.py  be28d934ebfd_rename_connector_track_id_to_identifier.py  e68ef4e64972_reorder_columns_id_first.py
docs/: API.md  ARCHITECTURE.md  BACKLOG.md  DATABASE.md  DEVELOPMENT.md  GETTING_STARTED_GUIDE.md  GUIDE_LIKES_SYNC.md  GUIDE_WORKFLOWS.md  IDEAS.md  MANUAL_TESTING_v0.3.md  ORPHAN_QUERY_OPTIMIZATION_ANALYSIS.md  README.md  SYSTEM_SUMMARY.md  deployment.md  development.md  likes_sync_guide.md  personas.md  review-system.md  workflow_guide.md
docs/architecture/: README.md  context-engineering-tool-routing.md  data-model.md  database.md  eager-load-audit.md  layers-and-patterns.md  session-management.md  tech-stack.md  workflow-execution-substrate.md  (+1 more)
scripts/: add_future_annotations.py  backfill_stranded_connector_plays.py  check_backlog.py  check_orphaned_records.py  check_ratchet.sh  check_test_db_patterns.py  cleanup_all_soft_deleted_data.py  cleanup_duplicate_playlist_mappings.py  cleanup_plays.py  cleanup_soft_deleted_connector_data.py  cleanup_test_playlists.py  count_playlist_tracks.py  debug_lastfm_api.py  debug_lastfm_mappings.py  debug_track_matching.py  delete_lastfm_track_mappings.py  delete_playlists.py  delete_specific_plays.py  diagnose_lastfm.py  diagnose_spotify.py  diagnose_stale_spotify_ids.py  explore_lastfm_recent_tracks_api.py  export_openapi.py  export_sqlite_workflows.py  find_duplicate_canonical_mappings.py  find_duplicate_tracks.py  fix_all_exports.py  fix_all_exports_v2.py  generate_capability_matrix.py  get_lastfm_track.py  hard_delete_orphaned_connector_tracks.py  init_db.py  investigate_orphaned_connector_tracks.py  lastfm_raw_response_analysis.json  merge_duplicate_canonical_tracks.py  migrate_timezones.py  optimized_orphan_detection.py  remove_all_quoted_types.py  remove_quoted_return_types.py  smoke_test_cross_source_dedup.py  (+2 more)
src/: __init__.py
tests/: conftest.py
web/: .gitignore  biome.json  components.json  index.html  knip.json  openapi.json  orval.config.ts  package.json  playwright-audit.config.ts  playwright-auth.config.ts  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
(+1630 files in other folders)
