[tool.poetry]
name = "narada"
version = "0.2.7"
description = "Music metadata integration and playlist management platform"
authors = ["Ash Wright <a@ashwright.net>"]
homepage = "https://github.com/w-ash/narada"
readme = "README.md"
license = "MIT"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.46"}
alembic = "^1.18.1"
httpx = "^0.28.1"
spotipy = "^2.25.2"
pylast = "^7.0.1"
musicbrainzngs = "^0.7.1"
loguru = "^0.7.3"
python-dotenv = "^1.2.1"
rich = "^14.3.1"
typer = "^0.21.1"
attrs = "^25.4.0"
toolz = "^1.1.0"
tenacity = "^9.1.2"
prefect = "^3.6.13"
aiosqlite = "^0.22.0"
rapidfuzz = "^3.14.3"
orjson = "^3.11.5"
pydantic-settings = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.8.0"
ruff = "^0.14.14"
pre-commit = "^4.5.1"
basedpyright = "^1.37.2"
vulture = "^2.14"
interrogate = "^1.7.0"
bandit = "^1.9.2"
psutil = "^7.1.3"

[tool.poetry.scripts]
narada = "src.interface.cli.app:main"
test-db = "narada.data.test_database:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration for version 0.14.10+ with Python 3.14 support
[tool.ruff]
# Basic settings
line-length = 88
target-version = "py314"
preview = true  # Enable latest lint rules and formatter improvements
# Python 3.14 specific: Enhanced version-aware parsing
output-format = "full"

[tool.ruff.lint]
# Linting rules
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade - modernize syntax
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
    "C4",    # flake8-comprehensions (optimizes list/dict comprehensions)
    "TCH",   # type-checking (better typing practices)
    "TID",   # tidy imports
    "S",     # flake8-bandit (security checks)
    "PIE",   # flake8-pie (misc. lints for code improvement)
    "PT",    # flake8-pytest-style (for better test patterns)
    "COM",   # flake8-commas (trailing comma usage)
    "DTZ",   # flake8-datetimez (timezone awareness)
    "PERF",  # Performance anti-patterns
    "ERA",   # Eradication of deprecated APIs
    "ASYNC", # Common async/await issues
    "FLY",   # String formatting issues
    "ARG",   # Function argument validation
    "TD003", # Mark TODOs with an assignee
    "PYI",   # Stub file linting
    "FURB",  # Refurb - modernize Python code patterns
    "LOG",   # Logging best practices
    "FA",    # Future annotations (Python 3.13 ready)
    "PERF",  # Performance anti-patterns
    "TRY",   # Exception handling best practices
    "PL",    # Pylint (additional logic checks)
    "PTH",   # Use pathlib for path operations
]

ignore = [
    "E501",      # Line too long (handled by formatter)
    "COM812",    # COM812 conflicts with formatter
    "PLR0912",   # Too many branches (complexity is fine for orchestration code)
    "PLR0915",   # Too many statements (orchestration functions can be long)
    "PLR0914",   # Too many local variables (data processing needs variables)
    "PLR1702",   # Too many nested blocks (error handling requires nesting)
    "PLR6301",   # Method could be function (DI pattern requires methods)
    "PLC0415",   # Import not at top (lazy imports for CLI performance)
    "TRY003",    # Long exception messages (clear error messages are good)
    "PLR6201",   # Use set for membership (tuples are fine for small static checks)
    "PLC2701",   # Private name imports (_shared modules are internal API)
    "PLR0913",   # Too many arguments (data processing functions need arguments)
    "PLR0917",   # Too many positional arguments (same as above)
    "PLR0911",   # Too many return statements (complex logic needs returns)
    "TRY300",    # Maybe we'll fix these eventually
    "TRY400",    # Use logging.exception (doesn't apply to Loguru)
    "PLW0603",   # Global statements (acceptable for library-style patterns in utilities)
    "TC001",     # Move import into TYPE_CHECKING block (obsolete with PEP 649)
    "TC002",     # Move import into TYPE_CHECKING block (obsolete with PEP 649)
    "TC003",     # Move import into TYPE_CHECKING block (obsolete with PEP 649)
    "TC006",     # Add quotes to cast() (contradicts PEP 649 - unquoted is correct for Python 3.14)
]
fixable = ["ALL"]
unfixable = []

# Per-file rule exceptions
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # Don't complain about unused imports in __init__ files
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ARG001",  # Allow unused function arguments (fixtures, mocks) 
    "ARG002",  # Allow unused method arguments (fixtures, mocks)
    "RUF029",  # Allow async functions without await (test setup functions)
    "ASYNC230", # Allow sync file operations in async test functions (test data)
    "ERA001",  # Allow commented-out code in tests (documentation, debugging)
    "N806",    # Allow uppercase variables for Mock classes
    "PT011",   # Allow broad pytest.raises without match (simpler test patterns)
    "B017",    # Allow pytest.raises(Exception) for general exception testing
    "E721",    # Allow type() == comparisons for exact type checking in tests
    "PLR2004"  # Allow magic numbers in tests (durations, counts, test data)
]
"src/application/use_cases/*.py" = ["ARG002"] # Allow parameter forwarding patterns in orchestrators
"scripts/**/*.py" = [
    "ASYNC230", # Allow sync file operations in async scripts
    "ARG001",   # Allow unused arguments in scripts
    "RUF029",   # Allow async functions without await in scripts
    "PLR2004"   # Allow magic numbers in utility scripts
]

# Import sorting configuration
[tool.ruff.lint.isort]
known-first-party = ["narada", "src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
split-on-trailing-comma = true
force-single-line = false           # Allow multi-line imports
force-sort-within-sections = true   # Sort within sections
from-first = false                  # Put "from" imports after regular imports (not before)
detect-same-package = true          # Similar to grouping by package
order-by-type = true                # Organize by import type

# Python 3.13+ specific settings via pyupgrade
[tool.ruff.lint.pyupgrade]
# Keep typed versions of builtins for better type checking
keep-runtime-typing = true

# Configure typing practices
[tool.ruff.lint.pydocstyle]
convention = "google"

# Formatter configuration (Ruff 0.14.6+ with Python 3.13 support)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
# 2025 best practice: Format code in docstrings
docstring-code-format = true
# Enhanced Python 3.13 support
docstring-code-line-length = "dynamic"

# flake8-annotations settings
[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

# flake8-bugbear settings
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

# Testing configuration (pytest 9+ native TOML)
[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (takes >1 second)",
    "performance: marks tests that validate performance characteristics",
    "diagnostic: marks tests used for diagnosing issues (not part of regular suite)",
]

[tool.coverage.run]
source = ["narada", "src"]
omit = ["tests/*"]

# Type checking configuration - BasedPyright (modern Python-focused type checker)
[tool.basedpyright]
include = ["src"]
exclude = ["tests", "**/__pycache__"]
typeCheckingMode = "recommended"  # More comprehensive than strict (2025 best practice)
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
reportUntypedBaseClass = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
# Python 3.14 and 2025 specific type checking features
reportDeprecated = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitOverride = "warning"
# BasedPyright specific enhancements (2025)
reportAny = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
# Python 3.14 typing features
enableTypeIgnoreComments = true
pythonVersion = "3.14"
pythonPlatform = "All"
# Modern virtual environment detection
venvPath = "."
venv = ".venv"

[tool.poetry.urls]
"Documentation" = "https://github.com/w-ash/narada/docs"
"Repository" = "https://github.com/w-ash/narada"
"Bug Tracker" = "https://github.com/w-ash/narada/issues"

[tool.typer.app]
name = "narada"
help = "Music metadata integration and playlist management platform"