[tool.poetry]
name = "narada"
version = "0.4.1"
description = "Music metadata integration and playlist management platform"
authors = ["Ash Wright <a@ashwright.net>"]
homepage = "https://github.com/w-ash/narada"
readme = "README.md"
license = "MIT"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.47"}
alembic = "^1.18.4"
httpx = "^0.28.1"
loguru = "^0.7.3"
python-dotenv = "^1.2.1"
rich = "^14.3.3"
typer = "^0.24.1"
attrs = "^25.4.0"
tenacity = "^9.1.4"
prefect = "^3.6.19"
aiosqlite = "^0.22.1"
rapidfuzz = "^3.14.3"
pydantic-settings = "^2.13.1"
fastapi = ">=0.135"
uvicorn = {extras = ["standard"], version = ">=0.34"}
python-multipart = "^0.0.22"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.8.0"
ruff = "^0.15.4"
pre-commit = "^4.5.1"
basedpyright = "^1.38.2"
vulture = "^2.14"
interrogate = "^1.7.0"
bandit = "^1.9.3"
psutil = "^7.2.2"

[tool.poetry.scripts]
narada = "src.interface.cli.app:main"
narada-api = "src.interface.api.app:run_server"
export-openapi = "scripts.export_openapi:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration for version 0.15.4+ with Python 3.14 support
[tool.ruff]
# Basic settings
line-length = 88
target-version = "py314"
preview = true  # Enable latest lint rules and formatter improvements
# Python 3.14 specific: Enhanced version-aware parsing
output-format = "full"

[tool.ruff.lint]
# Linting rules
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade - modernize syntax
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
    "C4",    # flake8-comprehensions (optimizes list/dict comprehensions)
    "TCH",   # type-checking (better typing practices)
    "TID",   # tidy imports
    "S",     # flake8-bandit (security checks)
    "PIE",   # flake8-pie (misc. lints for code improvement)
    "PT",    # flake8-pytest-style (for better test patterns)
    "COM",   # flake8-commas (trailing comma usage)
    "DTZ",   # flake8-datetimez (timezone awareness)
    "PERF",  # Performance anti-patterns
    "ERA",   # Eradication of deprecated APIs
    "ASYNC", # Common async/await issues
    "FLY",   # String formatting issues
    "ARG",   # Function argument validation
    "FURB",  # Refurb - modernize Python code patterns
    "LOG",   # Logging best practices
    "TRY",   # Exception handling best practices
    "PL",    # Pylint (additional logic checks)
    "PTH",   # Use pathlib for path operations
]

ignore = [
    "E501",      # Line too long (handled by formatter)
    "COM812",    # COM812 conflicts with formatter
    "PLR0912",   # Too many branches (complexity is fine for orchestration code)
    "PLR0915",   # Too many statements (orchestration functions can be long)
    "PLR0914",   # Too many local variables (data processing needs variables)
    "PLR1702",   # Too many nested blocks (error handling requires nesting)
    "PLR6301",   # Method could be function (DI pattern requires methods)
    "PLC0415",   # Import not at top (lazy imports for CLI performance)
    "TRY003",    # Long exception messages (clear error messages are good)
    "PLR6201",   # Use set for membership (tuples are fine for small static checks)
    "PLC2701",   # Private name imports (_shared modules are internal API)
    "PLR0913",   # Too many arguments (data processing functions need arguments)
    "PLR0917",   # Too many positional arguments (same as above)
    "PLR0911",   # Too many return statements (complex logic needs returns)
    "TRY400",    # Use logging.exception (doesn't apply to Loguru)
    "PLW0603",   # Global statements (acceptable for library-style patterns in utilities)
    "TC001",     # Move import into TYPE_CHECKING block (obsolete with PEP 649)
    "TC002",     # Move import into TYPE_CHECKING block (obsolete with PEP 649)
    "TC003",     # Move import into TYPE_CHECKING block (obsolete with PEP 649)
    "TC006",     # Add quotes to cast() (contradicts PEP 649 - unquoted is correct for Python 3.14)
]
fixable = ["ALL"]
unfixable = []

# Per-file rule exceptions
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # Don't complain about unused imports in __init__ files
"src/interface/api/**/*.py" = [
    "RUF029",   # FastAPI requires async handlers even without await (framework awaits them)
]
"tests/**/*.py" = [
    "S101",     # Allow assert in tests
    "ARG001",   # Allow unused function arguments (fixtures, mocks)
    "ARG002",   # Allow unused method arguments (fixtures, mocks)
    "RUF029",   # Allow async functions without await (test setup functions)
    "RUF059",   # Allow unused unpacked variables (destructured test results)
    "RUF069",   # Allow float equality in assertions (exact test values)
    "ASYNC230", # Allow sync file operations in async test functions (test data)
    "ASYNC240", # Allow pathlib in async test fixtures (cleanup code)
    "ERA001",   # Allow commented-out code in tests (documentation, debugging)
    "N806",     # Allow uppercase variables for Mock classes
    "PT011",    # Allow broad pytest.raises without match (simpler test patterns)
    "B017",     # Allow pytest.raises(Exception) for general exception testing
    "E721",     # Allow type() == comparisons for exact type checking in tests
    "PLR2004",  # Allow magic numbers in tests (durations, counts, test data)
    "F841",     # Allow assigned-but-unused variables (side-effect assertions)
    "SIM117",   # Allow nested with statements (patch + pytest.raises readability)
    "ARG005",   # Allow unused lambda arguments (mock callbacks)
    "S311",     # Allow non-cryptographic random (test data generation)
    "TRY002",   # Allow raising vanilla Exception (test error simulation)
    "PLC1901",  # Allow comparison to empty string (explicit test assertions)
    "S314",     # Allow XML parsing in tests (test data, not untrusted)
    "S405",     # Allow xml.etree imports in tests (test data parsing)
    "N818",     # Allow exception names without Error suffix (test helpers)
    "SIM102",   # Allow nested ifs in tests (readability with complex conditions)
    "SIM113",   # Allow manual counters in tests (as_completed doesn't support enumerate)
    "RUF001",   # Allow unicode characters in test strings (intentional test data)
    "RUF003",   # Allow unicode characters in test comments (readability)
]
"src/application/use_cases/*.py" = ["ARG002"] # Allow parameter forwarding patterns in orchestrators
"src/application/workflows/observers.py" = ["ARG002"] # Protocol implementations must match signatures
"scripts/**/*.py" = [
    "ASYNC230", # Allow sync file operations in async scripts
    "ASYNC250", # Allow blocking input() in async scripts (interactive CLI prompts)
    "ARG001",   # Allow unused arguments in scripts
    "RUF029",   # Allow async functions without await in scripts
    "PLR2004",  # Allow magic numbers in utility scripts
    "TRY300",   # Allow return in try blocks (simplicity over pedantry in scripts)
]

# Import sorting configuration
[tool.ruff.lint.isort]
known-first-party = ["narada", "src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
split-on-trailing-comma = true
force-single-line = false           # Allow multi-line imports
force-sort-within-sections = true   # Sort within sections
from-first = false                  # Put "from" imports after regular imports (not before)
detect-same-package = true          # Similar to grouping by package
order-by-type = true                # Organize by import type

# Python 3.13+ specific settings via pyupgrade
[tool.ruff.lint.pyupgrade]
# Keep typed versions of builtins for better type checking
keep-runtime-typing = true

# Configure typing practices
[tool.ruff.lint.pydocstyle]
convention = "google"

# Formatter configuration (Ruff 0.14.6+ with Python 3.13 support)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
# 2025 best practice: Format code in docstrings
docstring-code-format = true
# Enhanced Python 3.13 support
docstring-code-line-length = "dynamic"

# flake8-annotations settings
[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

# Note: implicit string concatenation (ISC) enforcement via basedpyright reportImplicitStringConcatenation
# — ruff ISC001/ISC002 don't catch the parenthesized multi-line pattern that basedpyright does.

# Testing configuration (pytest 9+ native TOML)
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers --tb=short -m 'not diagnostic and not slow and not performance'"
markers = [
    # Test Pyramid Layers (applied via pytestmark in conftest.py)
    "unit: unit tests - pure logic, no external dependencies (<100ms)",
    "integration: integration tests - real DB, mocked APIs (<1s)",
    "e2e: end-to-end tests - full system, critical user flows (<10s)",
    # Execution Filtering (skipped by default via addopts)
    "slow: tests that take longer than 1 second",
    "performance: performance and load testing with timing assertions",
    "diagnostic: diagnostic and profiling tests - for investigation only (skip by default)",
]

[tool.coverage.run]
source = ["narada", "src"]
omit = ["tests/*"]

# Type checking configuration - BasedPyright (modern Python-focused type checker)
[tool.basedpyright]
include = ["src"]
exclude = ["tests", "**/__pycache__"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
reportUntypedBaseClass = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
reportDeprecated = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitOverride = "warning"
# Keep: catches genuinely unknown types from missing annotations
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
# Disable: noise from legitimate patterns
# Any is the correct type for JSON payloads, loguru kwargs, protocol flexibility.
# reportUnknown* already catches genuinely unresolvable types.
reportAny = "warning"
reportExplicitAny = "warning"
# Side-effect calls (raise_for_status, .pop, .discard) intentionally discard returns.
reportUnusedCallResult = "none"
# Intentional patterns that "recommended" mode would flag as errors:
# - bare list/dict generics are valid in Python 3.14 (equivalent to list[Any])
reportMissingTypeArgument = "warning"
# - attrs @define classes initialize fields via __attrs_post_init__ (not __init__)
reportUninitializedInstanceVariable = "none"
# Python 3.14
enableTypeIgnoreComments = true
pythonVersion = "3.14"
pythonPlatform = "All"
venvPath = "."
venv = ".venv"

[tool.poetry.urls]
"Documentation" = "https://github.com/w-ash/narada/docs"
"Repository" = "https://github.com/w-ash/narada"
"Bug Tracker" = "https://github.com/w-ash/narada/issues"

[tool.typer.app]
name = "narada"
help = "Music metadata integration and playlist management platform"