[project]
name = "mixd"
version = "0.6.2"
description = "Music metadata integration and playlist management platform"
authors = [{name = "Ash Wright", email = "a@ashwright.net"}]
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.13,<3.15"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.47,<3",
    "alembic>=1.18.4,<2",
    "httpx>=0.28.1,<0.29",
    "structlog>=25.1,<26",
    "python-dotenv>=1.2.1,<2",
    "rich>=14.3.3,<15",
    "typer>=0.24.1,<0.25",
    "attrs>=26.1.0,<27",
    "tenacity>=9.1.4,<10",
    "prefect>=3.6.19,<4",
    "griffe>=1.5,<2",  # Prefect depends on griffe v1 API; v2.0 breaks imports
    "psycopg[binary]>=3.2,<4",
    "rapidfuzz>=3.14.3,<4",
    "pydantic-settings>=2.13.1,<3",
    "fastapi>=0.135",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.22,<0.0.23",
    "jellyfish>=1.2.1,<2",
    "pyjwt[crypto]>=2.12.1",
]

[project.scripts]
mixd = "src.interface.cli.app:main"
mixd-api = "src.interface.api.app:run_server"
export-openapi = "scripts.export_openapi:main"

[project.urls]
Homepage = "https://github.com/w-ash/mixd"
Documentation = "https://github.com/w-ash/mixd/docs"
Repository = "https://github.com/w-ash/mixd"
"Bug Tracker" = "https://github.com/w-ash/mixd/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest-xdist>=3.8.0,<4",
    "ruff>=0.15.4,<0.16",
    "pre-commit>=4.5.1,<5",
    "basedpyright>=1.38.2,<2",
    "vulture>=2.14,<3",
    "interrogate>=1.7.0,<2",
    "bandit>=1.9.3,<2",
    "psutil>=7.2.2,<8",
    "testcontainers[postgres]>=4.10,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Ruff configuration for version 0.15.4+ with Python 3.14 support
[tool.ruff]
# Basic settings
line-length = 88
target-version = "py314"
preview = true  # Enable latest lint rules and formatter improvements
# Python 3.14 specific: Enhanced version-aware parsing
output-format = "full"
extend-exclude = ["vulture_whitelist.py", "docs/dev-setup-guide"]

[tool.ruff.lint]
# Linting rules
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade - modernize syntax
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
    "C4",    # flake8-comprehensions (optimizes list/dict comprehensions)
    "TCH",   # type-checking (better typing practices)
    "TID",   # tidy imports
    "S",     # flake8-bandit (security checks)
    "PIE",   # flake8-pie (misc. lints for code improvement)
    "PT",    # flake8-pytest-style (for better test patterns)
    "COM",   # flake8-commas (trailing comma usage)
    "DTZ",   # flake8-datetimez (timezone awareness)
    "PERF",  # Performance anti-patterns
    "ERA",   # Eradication of deprecated APIs
    "ASYNC", # Common async/await issues
    "FLY",   # String formatting issues
    "ARG",   # Function argument validation
    "FURB",  # Refurb - modernize Python code patterns
    "LOG",   # Logging best practices
    "TRY",   # Exception handling best practices
    "PL",    # Pylint (additional logic checks)
    "PTH",   # Use pathlib for path operations
]

ignore = [
    "E501",      # Line too long (handled by formatter)
    "COM812",    # COM812 conflicts with formatter
    "PLR0912",   # Too many branches (complexity is fine for orchestration code)
    "PLR0915",   # Too many statements (orchestration functions can be long)
    "PLR0914",   # Too many local variables (data processing needs variables)
    "PLR1702",   # Too many nested blocks (error handling requires nesting)
    "PLR6301",   # Method could be function (DI pattern requires methods)
    "PLC0415",   # Import not at top (lazy imports for CLI performance)
    "TRY003",    # Long exception messages (clear error messages are good)
    "PLR6201",   # Use set for membership (tuples are fine for small static checks)
    "PLC2701",   # Private name imports (_shared modules are internal API)
    "PLR0913",   # Too many arguments (data processing functions need arguments)
    "PLR0917",   # Too many positional arguments (same as above)
    "PLR0911",   # Too many return statements (complex logic needs returns)
    "TRY400",    # Use logging.exception (doesn't apply to Loguru)
    "PLW0603",   # Global statements (acceptable for library-style patterns in utilities)
    "TC001",     # Move import into TYPE_CHECKING block (obsolete with PEP 649)
    "TC002",     # Move import into TYPE_CHECKING block (obsolete with PEP 649)
    "TC003",     # Move import into TYPE_CHECKING block (obsolete with PEP 649)
    "TC006",     # Add quotes to cast() (contradicts PEP 649 - unquoted is correct for Python 3.14)
]
fixable = ["ALL"]
unfixable = []

# Per-file rule exceptions
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "RUF067"]   # Allow unused imports and non-reexport code (version reading)
"src/interface/api/**/*.py" = [
    "RUF029",   # FastAPI requires async handlers even without await (framework awaits them)
]
"tests/**/*.py" = [
    "S101",     # Allow assert in tests
    "ARG001",   # Allow unused function arguments (fixtures, mocks)
    "ARG002",   # Allow unused method arguments (fixtures, mocks)
    "RUF029",   # Allow async functions without await (test setup functions)
    "RUF059",   # Allow unused unpacked variables (destructured test results)
    "RUF069",   # Allow float equality in assertions (exact test values)
    "ASYNC230", # Allow sync file operations in async test functions (test data)
    "ASYNC240", # Allow pathlib in async test fixtures (cleanup code)
    "ERA001",   # Allow commented-out code in tests (documentation, debugging)
    "N802",     # Allow uppercase in function names (e.g., pgcode test names)
    "N806",     # Allow uppercase variables for Mock classes
    "S105",     # Allow hardcoded password strings (test tokens)
    "S106",     # Allow hardcoded password arguments (test tokens)
    "PT011",    # Allow broad pytest.raises without match (simpler test patterns)
    "B017",     # Allow pytest.raises(Exception) for general exception testing
    "E721",     # Allow type() == comparisons for exact type checking in tests
    "PLR2004",  # Allow magic numbers in tests (durations, counts, test data)
    "F841",     # Allow assigned-but-unused variables (side-effect assertions)
    "SIM117",   # Allow nested with statements (patch + pytest.raises readability)
    "ARG005",   # Allow unused lambda arguments (mock callbacks)
    "S311",     # Allow non-cryptographic random (test data generation)
    "TRY002",   # Allow raising vanilla Exception (test error simulation)
    "PLC1901",  # Allow comparison to empty string (explicit test assertions)
    "S314",     # Allow XML parsing in tests (test data, not untrusted)
    "S405",     # Allow xml.etree imports in tests (test data parsing)
    "N818",     # Allow exception names without Error suffix (test helpers)
    "SIM102",   # Allow nested ifs in tests (readability with complex conditions)
    "SIM113",   # Allow manual counters in tests (as_completed doesn't support enumerate)
    "RUF001",   # Allow unicode characters in test strings (intentional test data)
    "RUF003",   # Allow unicode characters in test comments (readability)
]
"src/application/use_cases/*.py" = ["ARG002"] # Allow parameter forwarding patterns in orchestrators
"src/application/workflows/observers.py" = ["ARG002"] # Protocol implementations must match signatures
"scripts/**/*.py" = [
    "ASYNC230", # Allow sync file operations in async scripts
    "ASYNC250", # Allow blocking input() in async scripts (interactive CLI prompts)
    "ARG001",   # Allow unused arguments in scripts
    "RUF029",   # Allow async functions without await in scripts
    "PLR2004",  # Allow magic numbers in utility scripts
    "TRY300",   # Allow return in try blocks (simplicity over pedantry in scripts)
]

# Import sorting configuration
[tool.ruff.lint.isort]
known-first-party = ["mixd", "src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
split-on-trailing-comma = true
force-single-line = false           # Allow multi-line imports
force-sort-within-sections = true   # Sort within sections
from-first = false                  # Put "from" imports after regular imports (not before)
detect-same-package = true          # Similar to grouping by package
order-by-type = true                # Organize by import type

# Python 3.13+ specific settings via pyupgrade
[tool.ruff.lint.pyupgrade]
# Keep typed versions of builtins for better type checking
keep-runtime-typing = true

# Configure typing practices
[tool.ruff.lint.pydocstyle]
convention = "google"

# Formatter configuration (Ruff 0.14.6+ with Python 3.13 support)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
# 2025 best practice: Format code in docstrings
docstring-code-format = true
# Enhanced Python 3.13 support
docstring-code-line-length = "dynamic"

# flake8-annotations settings
[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

# Note: implicit string concatenation (ISC) enforcement via basedpyright reportImplicitStringConcatenation
# — ruff ISC001/ISC002 don't catch the parenthesized multi-line pattern that basedpyright does.

# Testing configuration (pytest 9+ native TOML)
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers --tb=short -n auto -m 'not diagnostic and not slow and not performance'"
filterwarnings = [
    # Savepoint-rollback test isolation triggers this when UoW manages its own transactions
    "ignore:nested transaction already deassociated from connection:sqlalchemy.exc.SAWarning",
    # AsyncMock auto-creates coroutine attributes that GC collects before they're awaited
    "ignore:coroutine '.*_safe_call' was never awaited:RuntimeWarning",
]
markers = [
    # Test Pyramid Layers (applied via pytestmark in conftest.py)
    "unit: unit tests - pure logic, no external dependencies (<100ms)",
    "integration: integration tests - real DB, mocked APIs (<1s)",
    "e2e: end-to-end tests - full system, critical user flows (<10s)",
    # Execution Filtering (skipped by default via addopts)
    "slow: tests that take longer than 1 second",
    "performance: performance and load testing with timing assertions",
    "diagnostic: diagnostic and profiling tests - for investigation only (skip by default)",
]

[tool.coverage.run]
source = ["mixd", "src"]
omit = ["tests/*"]

# Type checking configuration - BasedPyright (modern Python-focused type checker)
[tool.basedpyright]
include = ["src"]
exclude = ["tests", "**/__pycache__"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
reportUntypedBaseClass = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
reportDeprecated = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitOverride = "warning"
# Keep: catches genuinely unknown types from missing annotations
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
# Disable: noise from legitimate patterns
# Any is the correct type for JSON payloads, loguru kwargs, protocol flexibility.
# reportUnknown* already catches genuinely unresolvable types.
reportAny = "warning"
reportExplicitAny = "warning"
# Side-effect calls (raise_for_status, .pop, .discard) intentionally discard returns.
reportUnusedCallResult = "none"
# Intentional patterns that "recommended" mode would flag as errors:
# - bare list/dict generics are valid in Python 3.14 (equivalent to list[Any])
reportMissingTypeArgument = "warning"
# - attrs @define classes initialize fields via __attrs_post_init__ (not __init__)
reportUninitializedInstanceVariable = "none"
# Python 3.14
enableTypeIgnoreComments = true
pythonVersion = "3.14"
pythonPlatform = "All"
venvPath = "."
venv = ".venv"

# Dead code detection (Vulture 2.14+)
[tool.vulture]
paths = ["src/", "alembic/", "vulture_whitelist.py"]
exclude = ["tests/"]
min_confidence = 60
ignore_decorators = [
    "@router.*",           # FastAPI route handlers
    "@app.command",        # Typer CLI commands
    "@*_app.command",      # Typer CLI sub-app commands (track_app, etc.)
    "@app.callback",       # Typer CLI callbacks
    "@app.exception_handler",  # FastAPI exception handlers
    "@task",               # Prefect tasks
    "@flow",               # Prefect flows
    "@field_validator",    # Pydantic field validators
    "@model_validator",    # Pydantic model validators
    "@computed_field",     # Pydantic computed fields
]
ignore_names = [
    "model_config",        # Pydantic class-level config
    "revision",            # Alembic migration variables
    "down_revision",
    "branch_labels",
    "depends_on",
    "upgrade",             # Alembic migration functions
    "downgrade",
    "do_GET",              # HTTP handler protocol
    "log_message",         # HTTP handler protocol
]

[tool.typer.app]
name = "mixd"
help = "Music metadata integration and playlist management platform"
